--- a/hrApp-frontend/package.json
+++ b/hrApp-frontend/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "json-server --watch src/data/db.json --port 3001",
-    "start": "concurrently \"npm run server\" \"npm run dev\" "
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.13.2",
